# Engram

./: .gitignore  README.md  pyproject.toml
.kiro/specs/memorymesh/: .config.kiro  design.md  requirements.md  tasks.md
memorymesh/: .env  .env.example  .gitignore  ai.py  context.md  graph.py  index.html  main.py  memory.py  requirements.txt  schema.sql
memorymesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
memorymesh/tests/: test_ai.py  test_graph.py  test_memory.py  test_routes.py
